--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ayvnehh#1" target="_blank">首页</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/1?qhsfcvxa" target="_blank">动态网</a> | <a href="https://d1d4q9enzm2lz3.cloudfront.net/2?lybfysfkl" target="_blank">大纪元</a> | <a href="https://dycmgeziwp90b.cloudfront.net/4?zslko" target="_blank">看中国</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/pHh5q?lyjkrka" target="_blank">新生网</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/tktpt?naidd" target="_blank">阿波罗网</a> | <a href="https://d3vg08phoazui6.cloudfront.net/Mjpvu?xfwolgr" target="_blank">干净世界</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/10?mpbnoyoxe" target="_blank">退党服务</a> | <a href="https://d3abchfok6e2j.cloudfront.net/Rffqf?zjguikw" target="_blank">明慧广播</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/nw9Vn?tccnthv" target="_blank">传奇时代</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/AF9AG?djvkzzmw" target="_blank">新境界影视</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/zqMQA?sjddiy" target="_blank">文昭谈论</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/7?onkrk" target="_blank">明慧</a></p><p><a href="https://d3qxeoyqwzrtyq.cloudfront.net/9?reynf" target="_blank">大法</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/3?zhjitytpt" target="_blank">新唐人</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/obAhT?gbjbb" target="_blank">人民报</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/xXNHu?dkwenne" target="_blank">放光明</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/5?bbrxaz" target="_blank">新纪元</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/6?lsimo" target="_blank">希望之声</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/11?kxxaeyu" target="_blank">无界网络</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/Pueji?cdtwpl" target="_blank">追查国际</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/16?pedvo" target="_blank">明慧之窗</a> | <a href="https://doqmgyop4u892.cloudfront.net/LdvzZ?eorhpykc" target="_blank">细语人生</a> | <a href="https://d11leod1im7q2u.cloudfront.net/fBn3r?bhohitcm" target="_blank">新世纪影视</a> | <a href="https://dwzgr3popmlhv.cloudfront.net/PUWMb?xmvbljp" target="_blank">江峰时刻</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/8?stcrg" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546000.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2025/02/id14429157-CP13389790-320x200.jpg"><p align="center">加拿大情报局警报：有人为中共寻求敏感信息</p></a>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546000.md#1" title="加拿大情报局警报：有人为中共寻求敏感信息""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/02/id14429157-CP13389790-320x200.jpg">&nbsp;</a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?sxevxn#1" target="_blank">首页</a> | <a href="https://db8nk66phkh66.cloudfront.net/1?zkefi" target="_blank">动态网</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/2?tylis" target="_blank">大纪元</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/4?evmqr" target="_blank">看中国</a> | <a href="https://d2oemtubh889hy.cloudfront.net/pHh5q?hbjlqxbbu" target="_blank">新生网</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/tktpt?ybfqdoo" target="_blank">阿波罗网</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/Mjpvu?stogwwdp" target="_blank">干净世界</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/10?goocbi" target="_blank">退党服务</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/Rffqf?qvkyjz" target="_blank">明慧广播</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/nw9Vn?boxkdb" target="_blank">传奇时代</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/AF9AG?ttxaqzrkx" target="_blank">新境界影视</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/zqMQA?wrzbumul" target="_blank">文昭谈论</a> | <a href="https://d282b678eon3c.cloudfront.net/7?npnajdi" target="_blank">明慧</a></p><p><a href="https://d2cdd2sap6vl0o.cloudfront.net/9?atahsobgz" target="_blank">大法</a> | <a href="https://d3dbj8b4dt94o2.cloudfront.net/3?rrspmoj" target="_blank">新唐人</a> | <a href="https://dgk92ykceobaf.cloudfront.net/obAhT?vggjmnwdk" target="_blank">人民报</a> | <a href="https://d3ohms0ydcz20j.cloudfront.net/xXNHu?ifpsvfy" target="_blank">放光明</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/5?caabzbrpq" target="_blank">新纪元</a> | <a href="https://d27hok1oawuvj8.cloudfront.net/6?rulrwhy" target="_blank">希望之声</a> | <a href="https://d3gus727acem18.cloudfront.net/11?clsvddzmn" target="_blank">无界网络</a> | <a href="https://d2bd0i85jg8bcc.cloudfront.net/Pueji?ritwsjf" target="_blank">追查国际</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/16?soeydlllx" target="_blank">明慧之窗</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/LdvzZ?mdvoaye" target="_blank">细语人生</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/fBn3r?yfsnjbu" target="_blank">新世纪影视</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/PUWMb?pawad" target="_blank">江峰时刻</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/8?jqbdmg" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546000.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2025/02/id14429157-CP13389790-320x200.jpg"><p align="center">加情报局警报：有人为中共寻求敏感信息</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546000.md#1" title="加情报局警报：有人为中共寻求敏感信息""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/02/id14429157-CP13389790-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545014.md#1" title="宗教领袖：法轮功学员是中共全球镇压的目标""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/07/id14545016-KC-CurtainCall-LisaFan-20250223-1080x720-1-320x200.webp">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545740.md#1" title="人工智能作弊激增 美国学校转向手写考试""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/03/id13958454-164852-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545884.md#1" title="组图：德州洪水至少67死 州长宣布祈祷日""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/07/id14545891-GettyImages-2223000728-320x200.jpg">&nbsp;</a>
@@ -33,14 +33,14 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544699.md#1">宁波、上海等地出现巨大“日晕”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544481.md#1">【翻墙必看】年轻机长出事 谁是幕后黑手？</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545595.md#1">向往安全与自由 昔日粉红携儿女逃离中国</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545581.md#1">大而美法案下海外汇款税如何执行 一文看懂</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544232.md#1">美越达成贸易协议 为何中共心慌恐惧</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544120.md#1">【一线采访】南航机长刺伤高层 内幕曝光</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543562.md#1">“世壮运”上 音乐少年“踢”出双金人生</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543593.md#1">从小粉红到反共勇士：农家子弟觉醒之路</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543820.md#1">广东制造业陷寒冬 老牌厂知名外企宣告结业</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543771.md#1">李正宽：平反法轮功是破解中国危局关键</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543331.md#1">不堪中共迫害 大陆一家七口惊险逃抵墨尔本</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545612.md#1">王毅访欧露援俄底牌 专家揭其“泄密”意图</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545640.md#1">无锡民众收到超速罚单 17052km/h是波音787的20倍</a><br>
@@ -89,6 +89,7 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544135.md#1">【佳音时刻】中共权力洗牌 习式外交终结？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543585.md#1">王友群：习近平权力遭遇的又一次重击</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543003.md#1">王友群：迫害法轮功 中共已至疯癫状态</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543481.md#1">超10万元买金需申报 专家揭中共新规动机</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543425.md#1">与美签贸易协定的国家越多 北京为何越焦虑</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543173.md#1">杭州法拍房“托儿”变“接盘侠”的故事</a><br>
@@ -105,9 +106,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542690.md#1">涉当中共代理人刺探美军情报 两中国人被捕</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542702.md#1">【纪元焦点】夫妻却像室友？大陆“干婚”蔓延</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542696.md#1">【佳音时刻】从宴会厅到马路边 五星级酒店摆摊</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542541.md#1">陆配“小微”返乡遭封口 专家：言论自由消失</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2336h9ekekdeo.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2336h9ekekdeo.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,262</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d35x8fh88tf1l.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d35x8fh88tf1l.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,262</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
